--- a/portfolio.html
+++ b/portfolio.html
@@ -30,118 +30,120 @@
       </address>
     </header>
     <main>
-      <!-- Hero -->
+      <!-- Filters -->
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
-      <!-- Оur Features -->
-      <section>
-        <h2>Оur Features</h2>
+        <h1>Filters</h1>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
+            <button type="button">All</button>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
+            <button type="button">Web Site</button>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
+            <button type="button">App</button>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
+            <button type="button">Design</button>
+          </li>
+          <li>
+            <button type="button">Marketing</button>
           </li>
         </ul>
       </section>
-      <!-- What are we doing? -->
+      <!-- What are we doing -->
       <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
             <img
-              src="./img/desktop.jpg"
-              alt="Desktop applications"
+              src="./img/portfolio/img1.jpg"
+              alt=""
               width="360"
               height="360"
             />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
           </li>
           <li>
             <img
-              src="./img/mobile.jpg"
-              alt="Mobile applications"
+              src="./img/portfolio/img2.jpg"
+              alt=""
               width="360"
               height="360"
             />
-          </li>
-          <li>
-            <img
-              src="./img/design.jpg"
-              alt="Applications design"
-              width="360"
-              height="360"
-            />
-          </li>
-        </ul>
-      </section>
-      <!-- Our Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./img/mark.jpg"
-              alt="Smiling guy with beard"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./img/tom.jpg"
-              alt="Smiling guy with fancy hairstyle"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./img/camila.jpg"
-              alt="Shy lady with pink lipstick"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
+            <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./img/daniel.jpg"
-              alt="Typical hipster"
-              width="264"
-              height="260"
+              src="./img/portfolio/img3.jpg"
+              alt=""
+              width="360"
+              height="360"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3>Meditaion App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img4.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img5.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img6.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img7.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img8.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/img9.jpg"
+              alt=""
+              width="360"
+              height="360"
+            />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
         </ul>
       </section>
