--- a/portfolio.html
+++ b/portfolio.html
@@ -10,147 +10,191 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="index.html"> <span>web</span>studio</a>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo link" href="index.html">
+          <span class="logo-web">web</span>studio</a
+        >
+        <ul class="header-list list">
+          <li>
+            <a class="header-item link" href="index.html">Studio</a>
+          </li>
+          <li>
+            <a class="header-item link portfolio" href="portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li><a class="header-item link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="address-list list">
+          <li>
+            <a class="address-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-item link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <!-- Filters -->
-      <section>
-        <h1>Filters</h1>
-        <ul>
-          <li>
-            <button type="button">All</button>
+      <section class="portfolio-section">
+        <h1 class="portfolio-title">What are we doing</h1>
+
+        <!-- Filters -->
+        <ul class="filters-list list">
+          <li class="filters-item">
+            <button class="filters-btn" type="button">All</button>
           </li>
-          <li>
-            <button type="button">Web Site</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Web Site</button>
           </li>
-          <li>
-            <button type="button">App</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">App</button>
           </li>
-          <li>
-            <button type="button">Design</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Design</button>
           </li>
-          <li>
-            <button type="button">Marketing</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <!-- What are we doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="./img/portfolio/img1.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+        <!-- What are we doing -->
+        <ul class="our-works-list list">
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img1.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Banking App Interface Concept</h2>
+              <p class="results-dsc">App</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img2.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img2.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Cashless Payment</h2>
+              <p class="results-dsc">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img3.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img3.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Meditaion App</h2>
+              <p class="results-dsc">App</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img4.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img4.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Taxi Service</h2>
+              <p class="results-dsc">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img5.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img5.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Screen Illustrations</h2>
+              <p class="results-dsc">Design</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img6.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img6.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Online Courses</h2>
+              <p class="results-dsc">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img7.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img7.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Instagram Stories Concept</h2>
+              <p class="results-dsc">Design</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img8.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img8.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Organic Food</h2>
+              <p class="results-dsc">Web Site</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="./img/portfolio/img9.jpg"
-              alt=""
-              width="360"
-              height="360"
-            />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="results-item">
+            <a class="results-link link" href="">
+              <img
+                class="results-img"
+                src="./img/portfolio/img9.jpg"
+                alt=""
+                width="360"
+                height="360"
+              />
+              <h2 class="results-subtitle">Fresh Coffee</h2>
+              <p class="results-dsc">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html"> <span>web</span>studio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link logo-footer" href="index.html">
+        <span class="logo-web">web</span>studio
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
