--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <!-- Оur Features -->
       <section>
-        <h2 class="features-title">Оur Features</h2>
+        <h2 class="visually-hidden">Оur Features</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-subtitle">Strategy</h3>
@@ -89,7 +89,7 @@
       </section>
       <!-- What are we doing? -->
       <section>
-        <h2 class="works-title">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="works-list list">
           <li class="works-item">
             <img
@@ -122,7 +122,7 @@
       </section>
       <!-- Our Team -->
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-member">
             <img
