--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section class="portfolio-section">
-        <h1 class="portfolio-title">What are we doing</h1>
+        <h1 class="visually-hidden">What are we doing</h1>
 
         <!-- Filters -->
         <ul class="filters-list list">
@@ -69,7 +69,7 @@
           </li>
         </ul>
         <!-- What are we doing -->
-        <ul class="our-works-list list">
+        <ul class="results-list list">
           <li class="results-item">
             <a class="results-link link" href="">
               <img
